--- a/style/responsive.css
+++ b/style/responsive.css
@@ -10,47 +10,7 @@
         padding: 15px 0px;
     }
 
-    #hamburguer-menu{
-        display: none;
-    }
-
-    #left{
-        flex-wrap: wrap;
-    }
-
-    #category-list{
-        display: flex;
-        align-items: center;
-        list-style-type: none;
-        margin-left: 25px;
-        flex-wrap: wrap;
-    }
-
-    #category-list li{
-        margin: 20px 20px;
-        position: relative;
-        color: var(--neutral-gblue);
-        cursor: pointer;
-    }
-
-    #category-list li:hover{
-        color: black;
-    }
-
-    #category-list li:before{
-        content: '';
-        width: 100%;
-        height: 2px;
-        background: var(--primary-orange);
-        position: absolute;
-        display: none;
-        top: calc(100% + 2.1rem);
-    }
-
-    #category-list li:hover:before{
-        display: block;
-    }
-
+   
     #container{
         display: flex;
         justify-content: center;
@@ -127,6 +87,10 @@
 }
 
 @media screen and (max-width: 800px){
+    nav div{
+        padding: 15px 10px 10px 0;
+    }
+
     #buy-area{
         display: flex;
         flex-direction: column;
@@ -141,4 +105,50 @@
         width: 100%;
         height: 10%;
     }
+}
+
+@media screen and (min-width: 800px){
+    
+
+    #hamburguer-menu{
+        display: none;
+    }
+
+    #left{
+        flex-wrap: wrap;
+    }
+
+    #category-list{
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+        margin-left: 25px;
+        flex-wrap: wrap;
+    }
+
+    #category-list li{
+        margin: 20px 20px;
+        position: relative;
+        color: var(--neutral-gblue);
+        cursor: pointer;
+    }
+
+    #category-list li:hover{
+        color: black;
+    }
+
+    #category-list li:before{
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: var(--primary-orange);
+        position: absolute;
+        display: none;
+        top: calc(100% + 2.1rem);
+    }
+
+    #category-list li:hover:before{
+        display: block;
+    }
+
 }
