--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,7 @@ nav div{
 
 #category-list{
     display: none;
+    font-size: 80%;
 }
 
 #avatar{
